--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@
     --ring: 160.1 84.1% 39.4%;
     --radius: 0.5rem;
   }
-  .dark {
+  /* .dark {
     --background: 160.1 0% 95%;
     --foreground: 160.1 0% 10%;
     --card: 160.1 0% 90%;
@@ -94,7 +94,7 @@
     --input: 160.1 20% 49%;
     --ring: 160.1 84.1% 39.4%;
     --radius: 0.5rem;
-  }
+  } */
 }
 
 @layer base {
